CREATE TABLE users (
                       id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

                       name VARCHAR(100) NOT NULL,

                       email VARCHAR(255) NOT NULL,

                       password_hash VARCHAR(255) NOT NULL,

                       avatar_url VARCHAR(2048),

                       role VARCHAR(20) NOT NULL DEFAULT 'USER',

                       status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',

                       position_id BIGINT,

                       blocked_at TIMESTAMPTZ,

                       created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

                       updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

                       CONSTRAINT users_name_not_blank
                           CHECK (BTRIM(name) <> ''),

                       CONSTRAINT users_email_not_blank
                           CHECK (BTRIM(email) <> ''),

                       CONSTRAINT users_password_hash_not_blank
                           CHECK (BTRIM(password_hash) <> ''),

                       CONSTRAINT users_role_check
                           CHECK (
                               role IN (
                                        'USER',
                                        'ADMIN'
                                   )
                               ),

                       CONSTRAINT users_status_check
                           CHECK (
                               status IN (
                                          'ACTIVE',
                                          'BLOCKED'
                                   )
                               ),

                       CONSTRAINT users_blocked_state_check
                           CHECK (
                               (
                                   status = 'ACTIVE'
                                       AND blocked_at IS NULL
                                   )
                                   OR
                               (
                                   status = 'BLOCKED'
                                       AND blocked_at IS NOT NULL
                                   )
                               ),

                       CONSTRAINT users_position_fk
                           FOREIGN KEY (position_id)
                               REFERENCES positions(id)
                               ON DELETE RESTRICT
);

CREATE UNIQUE INDEX users_email_uq
    ON users (LOWER(BTRIM(email)));

CREATE INDEX users_position_idx
    ON users (position_id);

CREATE INDEX users_role_status_idx
    ON users (
              role,
              status
        );