CREATE TABLE products (
                          id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

                          sku VARCHAR(64) NOT NULL,

                          name VARCHAR(255) NOT NULL,

                          category VARCHAR(120),

                          created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

                          updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

                          CONSTRAINT products_sku_not_blank
                              CHECK (BTRIM(sku) <> ''),

                          CONSTRAINT products_name_not_blank
                              CHECK (BTRIM(name) <> ''),

                          CONSTRAINT products_sku_uq
                              UNIQUE (sku)
);