CREATE TABLE sales (
                       id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

                       product_id BIGINT NOT NULL,

                       sale_date DATE NOT NULL,

                       quantity INTEGER NOT NULL,

                       created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

                       CONSTRAINT sales_product_fk
                           FOREIGN KEY (product_id)
                               REFERENCES products(id)
                               ON DELETE RESTRICT,

                       CONSTRAINT sales_quantity_non_negative
                           CHECK (quantity >= 0),

                       CONSTRAINT sales_product_date_uq
                           UNIQUE (
                                   product_id,
                                   sale_date
                               )
);